--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 
 # Virtual environment
 .venv/
-env/
+.env/
 
 # Django
 *.log
@@ -15,6 +15,7 @@ db.sqlite3
 .idea/
 .vscode/
 
-# Static / media (optional if generated)
+# Static
 staticfiles/
 media/
+
